fixed broken link, changed text contrast in feedback box

--- a/resources/scss/partials/feedback.scss
+++ b/resources/scss/partials/feedback.scss
@@ -213,12 +213,12 @@
         }
 
         time {
-            color: $colors-neutral-40
+            color: $colors-neutral-60
         }
 
         .status {
             font-size: 0.75rem;
-            color: $colors-neutral-40
+            color: $colors-neutral-60;
         }
     }
 }
